# face_recognition

./: .env.example  .gitignore  LICENSE  LINUX_SETUP.md  README.md  backfill_photos.py  bulk_import.py  index.html  pyproject.toml  results.html
src/: __init__.py
src/video_intel/: __init__.py  celery_worker.py  database.py  main.py  pipeline.py
src/video_intel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_pipeline.py
